<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AdvancedCalc">

    <HorizontalScrollView
        android:id="@+id/hss1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="right"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gr1"
        app:layout_constraintHeight_percent="0.15">

        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="200sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textColor="@color/button_text"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </HorizontalScrollView>
    <GridLayout
        android:id="@+id/gr1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="4"
        android:gravity="center"
        android:orientation="vertical"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hss1"
        >

        <Button
            android:id="@+id/id_bksp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/backspace"
            android:layout_gravity="fill"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/id_clear"
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"/>

        <Button
            android:id="@+id/id_change_sign"
            android:text="@string/changeSign"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/sin"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/sin"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/cos"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:text="@string/cos"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/tan"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/tan"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/ln"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:text="@string/ln"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/sqrt"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/sqrt"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/xsquare"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:text="@string/x_2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/xpowy"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/x_y"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/log"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:text="@string/log"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_digit_7"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/seven"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/id_digit_8"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:text="@string/eight"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/id_digit_9"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/nine"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/id_divide"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:text="@string/divide"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/id_digit_4"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/four"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_digit_5"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:text="@string/five"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_digit_6"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/six"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/id_multiply"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:text="@string/multiply"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_digit_1"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/one"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_digit_2"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:text="@string/two"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_digit_3"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/three"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/id_minus"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:text="@string/minus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>


        <Button
            android:id="@+id/id_digit_0"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/zero"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_dot"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:text="@string/dot"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_equals"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/equal"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/id_plus"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:text="@string/plus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

